--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" type="text/css" href="assets/bootswatch/bootstrap.min.css">
     <title>Github Finder</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-primary mb-3">
+    <nav class="navbar navbar-dark backg-secondary mb-3">
         <div class="container">
             <a href="#" class="navbar-brand">Github Finder</a>
+            
+            <div class="checkbox custom-checkbox text-white">
+                <label id="dark"><input type="checkbox" value=""><span class="pl-2">Light</span></label>
+              </div>
         </div>
     </nav>
 
     <div class="container search-container">
-        <div class="search card card-body">
-            <h1>Search GitHub Users</h1>
-            <p class="lead">Enter username to fetch profile</p>
+        <div class="search card card-body backg-extra">
+            <h1 class="t-white">Search GitHub Users</h1>
+            <p class="lead t-white">Enter username to fetch profile</p>
 
             <input type="text" id="searchUser" class="form-control" placeholder="Github Username">
         </div>  
@@ -24,7 +29,7 @@
         <div id="profile"></div>
     </div>
 
-    <footer class="mt-5 p-3 text-center bg-light">Github Finder &copy;</footer>
+    <footer class="mt-5 p-3 text-center backg-secondary text-white">Github Finder &copy;</footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -34,6 +39,7 @@
     <!--ui-->
     <script src="ui.js"></script>
     <script src="app.js"></script>
+    <script src="theme.js"></script>
 
 </body> 
 </html>
